skins/vector/main.css
/* ... */
	div#actions > div.menu > ul > li > a,
	div#actions > div.menu > ul > li > a:visited {
		color: #0645ad;
	}

/* I DON"T THINK THIS IS AWESOME, BUT IT"S SOMETHING... */

/* Variants */
div#variants {
	float: left;
	height: 3em; /* HALF HEAD HEIGHT */
	background-image: url(images/head-break.png);
	background-position: bottom right;
	background-repeat: no-repeat;
	padding-right: 1px;
}
body.rtl div#variants {
	float: right;
	background-position: bottom left;
	padding-right: 0;
	padding-left: 1px;
}
	div#variants > h5 {
		height: 100%;
		margin: 0;
		padding: 0;
		background-image: url(images/action-normal-fade.png);
		background-position: bottom left;
		background-repeat: repeat-x;
	}
	body.rtl div#variants > h5 {
		background-position: bottom right;
	}
	div#variants > h5 > div.icon {
		height: 80%;
		width: 16px;
		margin-left: 0.25em;
		margin-right: 0.25em;
		background-image: url(images/arrow-down-icon.png);
		background-position: bottom center;
		background-repeat: no-repeat;
		cursor: default;
	}
	div#variants > h5 > div.icon > span {
		display: none;
	}
	div#variants > div.menu {
		display: none;
	}
	div#variants:hover > div.menu {
		display: block;
	}
	div#variants > div.menu > ul {
		position: absolute;
		list-style: none;
		background-color: white;
		border: solid 1px silver;
		border-top-width: 0;
		margin: 0;
		margin-left: -1px;
		padding: 0;
	}
	body.rtl div#variants > div.menu > ul {
		margin-left: 0;
		margin-right: -1px;
	}
	div#variants > div.menu > ul > li {
		margin: 0;
		padding: 0;
	}
	div#variants > div.menu > ul > li > a {
		display: block;
		padding-top: 0.25em;
		padding-bottom: 0.25em;
		padding-left: 0.5em;
		padding-right: 0.5em;
	}
	div#variants > div.menu > ul > li > a,
	div#variants > div.menu > ul > li > a:visited {
		color: #0645ad;
	}

/* END OF STUFF I"M NOT SURE ABOUT... */

/* Search */
div#search {
	margin-top: 0.75em;
	margin-right: 0.5em;
	margin-left: 0.75em;
	float: left;
}
body.rtl div#search {
	margin-right: 0.75em;
	margin-left: 0.5em;
	float: right;
}
	div#search h5 {
		display: none;
	}

/* Personal */
div#personal {
	float: right;
	margin-top: 0.25em;
	margin-right: 0.75em;
	margin-left: 0.75em;
}
body.rtl div#personal {
	float: left;
}
	div#personal > div.buffer > h5 {
		display: none;
	}
	div#personal > div.buffer > ul {
		list-style: none;
		margin: 0;
		padding: 0;
	}
	div#personal > div.buffer > ul > li {
		float: left;
		margin: 0;
		padding-bottom: 0.5em;
		padding-left: 1em;
		font-size: 0.9em;
	}
	body.rtl div#personal > div.buffer > ul > li {
		float: right;
		padding-left: 0;
		padding-right: 1em;
	}
	div#personal > div.buffer > ul > li > a,
	div#personal > div.buffer > ul > li > a:visited {
		color: #0645ad;
	}
	div#personal > div.buffer > ul > li > a.new,
	div#personal > div.buffer > ul > li > a.new:visited {
		color: #a55858;
	}

/*
 * 
 * The following code is highly modified from monobook. It would be nice if the
 * preftoc id was more human readable like preferences-toc for instance,
 * howerver this would require backporting the other skins.
 * 
 */

/* Preferences */
#preftoc {
	/* Tabs */
	float: left;
	clear: both;
	margin: 0;
	padding: 0;
	height: 2.25em;
	background-image: url(images/preferences-break.png);
	background-position: bottom left;
	background-repeat: no-repeat;
}
body.rtl #preftoc {
	background-position: bottom right;
}
	#preftoc li {
		/* Tab */
		float: left;
		margin: 0;
		padding: 0;
		padding-right: 1px;
		height: 2.25em;
		white-space: nowrap;
		list-style-type: none;
		list-style-image: none;
		background-image: url(images/preferences-break.png);
		background-position: bottom right;
		background-repeat: no-repeat;
	}
	#preftoc li:first-child {
		margin-left: 1px;
	}
	body.rtl #preftoc li {
		float: right;
		padding-right: 0;
		padding-left: 1px;
		background-position: bottom left;
	}
	#preftoc a,
	#preftoc a:active {
		/* Tab Label */
		display: block;
		position: relative;
		color: #0645ad;
		padding: 0.5em;
		text-decoration: none;
		background-image: none;
	}
	#preftoc a:hover {
		text-decoration: underline;
	}
	#preftoc li.selected a {
		/* Selected Tab Label */
		cursor: default;
		background-image: url(images/preferences-fade.png);
		background-position: bottom;
		background-repeat: repeat-x;
		color: #333333;
		cursor: default;
		text-decoration: none;
	}
#preferences {
	float: left;
	width: 100%;
	margin: 0;
	clear: both;
	border: solid 1px #cccccc;
	background-color: #f9f9f9;
	background-image: url(images/preferences-base.png);
}
#preferences > fieldset.prefsection {
	border: none;
	padding: 0;
	margin: 1em;
}
#preferences > fieldset.prefsection > fieldset {
	border: none;
	border-top: solid 1px #cccccc;
}
#preferences legend {
	color: #666666;
}
#preferences > fieldset.prefsection > legend.mainLegend {
	display: none;
}
#preferences td {
	padding-left: 0.5em;
	padding-right: 0.5em;
}
#preferences td.htmlform-tip {
	font-size: x-small;
	padding: .2em 2em;
	color: #666666;
}
#preferences div.mw-prefs-buttons {
	padding: 1em;
}
#preferences div.mw-prefs-buttons input {
	margin-right: 0.25em;
}

/*
 * 
 * The following code is slightly modified from monobook
 * 
 */

/* Links */
a {
	text-decoration: none;
	color: #0645ad;
	background: none;
}
a:visited {
	color: #0b0080;
}
a:active {
	color: #faa700;
}
a:hover {
	text-decoration: underline;
}
a.stub {
	color: #772233;
}
a.new, #p-personal a.new {
	color: #ba0000;
}
a.new:visited, #p-personal a.new:visited {
	color: #a55858;
}

/* Inline Elements */
img {
	border: none;
	vertical-align: middle;
}
hr {
	height: 1px;
	color: #aaa;
	background-color: #aaa;
	border: 0;
	margin: .2em 0 .2em 0;
}

/* Structural Elements */
h1,
h2,
h3,
h4,
h5,
h6 {
	color: black;
	background: none;
	font-weight: normal;
	margin: 0;
	padding-top: .5em;
	padding-bottom: .17em;
	border-bottom: 1px solid #aaa;
	width: auto;
}
h1 { font-size: 188%; }
h1 .editsection { font-size: 53%; }
h2 { font-size: 150%; }
h2 .editsection { font-size: 67%; }
/* ... */

